code improvements and cleanup, new java methods and jdk22+ support